--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -17,6 +17,14 @@
         </header>
 
         <main class="main-content">
+            <!-- Monitoring Control Section -->
+            <section class="control-section">
+                <h2>🎮 Monitoring Control</h2>
+                <div class="control-buttons">
+                    <button type="button" id="toggleMonitoringBtn" class="btn btn-primary">Start Monitoring</button>
+                </div>
+            </section>
+
             <!-- Configuration Section -->
             <section class="config-section">
                 <div class="accordion-header" id="configAccordionHeader">
@@ -62,15 +70,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </section>
-
-            <!-- Monitoring Control Section -->
-            <section class="control-section">
-                <h2>🎮 Monitoring Control</h2>
-                <div class="control-buttons">
-                    <button type="button" id="startBtn" class="btn btn-success">Start Monitoring</button>
-                    <button type="button" id="stopBtn" class="btn btn-danger" disabled>Stop Monitoring</button>
                 </div>
             </section>
 
