--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -63,10 +63,14 @@
                         </div>
 
                         <div class="form-actions">
-                            <button type="button" id="saveConfigBtn" class="btn btn-primary">Save Configuration</button>
-                            <button type="button" id="loadConfigBtn" class="btn btn-secondary">Import Configuration</button>
+                            <div class="button-row">
+                                <button type="button" id="saveConfigBtn" class="btn btn-primary">Save Configuration</button>
+                                <button type="button" id="loadConfigBtn" class="btn btn-secondary">Import Configuration</button>
+                                <button type="button" id="exportConfigBtn" class="btn btn-secondary">Export Configuration</button>
+                            </div>
                             <div class="form-help">
-                                <small>💡 Import Configuration: Select a JSON file to import and overwrite current settings</small>
+                                <small>💡 Import Configuration: Select a JSON file to import and overwrite current settings</small><br>
+                                <small>💡 Export Configuration: Save current settings to a JSON file in the new standardized format</small>
                             </div>
                         </div>
                     </div>
@@ -100,6 +104,11 @@
             <div class="form-group">
                 <label for="botWebhook">Discord Webhook URL:</label>
                 <input type="text" id="botWebhook" placeholder="https://discord.com/api/webhooks/...">
+            </div>
+            <div class="form-group">
+                <label for="botLaunchCLI">Launch CLI Command (Optional):</label>
+                <input type="text" id="botLaunchCLI" placeholder="java -jar DreamBot.jar -script MyScript -world 301">
+                <small class="form-help">Optional: Command to run in a new terminal window when launching this bot. <strong>Requires DreamBot VIP subscription.</strong> Leave empty if not needed.</small>
             </div>
             <div class="modal-actions">
                 <button type="button" id="saveBotBtn" class="btn btn-primary">Save</button>
