add bot status list and launcher action

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -23,6 +23,21 @@
                 <div class="control-buttons">
                     <button type="button" id="toggleMonitoringBtn" class="btn btn-primary">Start Monitoring</button>
                 </div>
+                
+                <!-- Bot Status Table -->
+                <div class="bot-status-section">
+                    <h3>🤖 Bot Status</h3>
+                    <div class="bot-status-table">
+                        <div class="table-header">
+                            <span class="bot-name-header">Bot Name</span>
+                            <span class="bot-status-header">Status</span>
+                            <span class="bot-actions-header">Actions</span>
+                        </div>
+                        <div id="botStatusList" class="bot-status-list">
+                            <!-- Bot status rows will be added here dynamically -->
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!-- Configuration Section -->
