fix status tracking  based on launched terminal

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -25,19 +25,22 @@
                 </div>
                 
                 <!-- Bot Status Table -->
-                <div class="bot-status-section">
-                    <h3>🤖 Bot Status</h3>
-                    <div class="bot-status-table">
-                        <div class="table-header">
-                            <span class="bot-name-header">Bot Name</span>
-                            <span class="bot-status-header">Status</span>
-                            <span class="bot-actions-header">Actions</span>
-                        </div>
-                        <div id="botStatusList" class="bot-status-list">
-                            <!-- Bot status rows will be added here dynamically -->
-                        </div>
-                    </div>
-                </div>
+                         <div class="bot-status-section">
+             <h3>🤖 Bot Status</h3>
+             <div class="bot-status-table">
+                 <div class="table-header">
+                     <span class="bot-name-header">Bot Name</span>
+                     <span class="bot-status-header">Status</span>
+                     <span class="bot-actions-header">Actions</span>
+                 </div>
+                 <div id="botStatusList" class="bot-status-list">
+                     <!-- Bot status rows will be added here dynamically -->
+                 </div>
+             </div>
+             <div class="bot-status-debug">
+                 <button type="button" class="btn btn-small btn-secondary" id="debugTrackingBtn">🐛 Debug Tracking</button>
+             </div>
+         </div>
             </section>
 
             <!-- Configuration Section -->
