add DreamBot VIP config flag

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -70,6 +70,14 @@
                         </div>
 
                         <div class="form-group">
+                            <label for="vipFeatures">DreamBot VIP Features</label>
+                            <div class="checkbox-container">
+                                <input type="checkbox" id="vipFeatures">
+                                <small class="form-help">Enable advanced features like CLI bot launching. Requires DreamBot VIP subscription.</small>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
                             <label>Bot-Specific Webhooks:</label>
                             <div id="botWebhooks" class="bot-webhooks">
                                 <!-- Bot webhooks will be added here dynamically -->
