--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RuneScape Bot Monitor</title>
+    <title>DreamBot Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <h1>🤖 RuneScape Bot Monitor</h1>
+            <h1>🤖 DreamBot Dashboard</h1>
             <div class="status-indicator" id="statusIndicator">
                 <span class="status-dot" id="statusDot"></span>
                 <span class="status-text" id="statusText">Stopped</span>
@@ -78,7 +78,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label>Bot-Specific Webhooks:</label>
+                            <label>Bot Configurations</label>
                             <div id="botWebhooks" class="bot-webhooks">
                                 <!-- Bot webhooks will be added here dynamically -->
                             </div>
